bindings/c/whiteout_m3.h

typedef struct whiteout_M3SplineRibbon whiteout_M3SplineRibbon;
typedef struct whiteout_M3RibbonEmitter whiteout_M3RibbonEmitter;
typedef struct whiteout_M3Projector whiteout_M3Projector;
typedef struct whiteout_M3MaterialMap whiteout_M3MaterialMap;
/* Noise spatial frequency */
float whiteout_m3_M3RibbonEmitter_get_noiseFrequency(const whiteout_M3RibbonEmitter* self);
void whiteout_m3_M3RibbonEmitter_set_noiseFrequency(whiteout_M3RibbonEmitter* self, float value);
/* Noise temporal coherence */
float whiteout_m3_M3RibbonEmitter_get_noiseCoherence(const whiteout_M3RibbonEmitter* self);
void whiteout_m3_M3RibbonEmitter_set_noiseCoherence(whiteout_M3RibbonEmitter* self, float value);
/* Noise edge sharpness */
float whiteout_m3_M3RibbonEmitter_get_noiseEdge(const whiteout_M3RibbonEmitter* self);
void whiteout_m3_M3RibbonEmitter_set_noiseEdge(whiteout_M3RibbonEmitter* self, float value);
/* Index + length */
uint32_t whiteout_m3_M3RibbonEmitter_get_indexPlusLength(const whiteout_M3RibbonEmitter* self);
void whiteout_m3_M3RibbonEmitter_set_indexPlusLength(whiteout_M3RibbonEmitter* self, uint32_t value);
/* Emitter shape type */
uint32_t whiteout_m3_M3RibbonEmitter_get_emitterShape(const whiteout_M3RibbonEmitter* self);
void whiteout_m3_M3RibbonEmitter_set_emitterShape(whiteout_M3RibbonEmitter* self, uint32_t value);
/* Ribbon cross-section type */
int32_t whiteout_m3_M3RibbonEmitter_get_ribbonType(const whiteout_M3RibbonEmitter* self);
void whiteout_m3_M3RibbonEmitter_set_ribbonType(whiteout_M3RibbonEmitter* self, int32_t value);
/* Number of ribbon divisions */
float whiteout_m3_M3RibbonEmitter_get_divisions(const whiteout_M3RibbonEmitter* self);
void whiteout_m3_M3RibbonEmitter_set_divisions(whiteout_M3RibbonEmitter* self, float value);
/* Number of cross-section edges */
uint32_t whiteout_m3_M3RibbonEmitter_get_edges(const whiteout_M3RibbonEmitter* self);
void whiteout_m3_M3RibbonEmitter_set_edges(whiteout_M3RibbonEmitter* self, uint32_t value);
/* Inner radius */
float whiteout_m3_M3RibbonEmitter_get_innerRadius(const whiteout_M3RibbonEmitter* self);
void whiteout_m3_M3RibbonEmitter_set_innerRadius(whiteout_M3RibbonEmitter* self, float value);
/* Spline ribbon segments (SRIB) */
size_t whiteout_m3_M3RibbonEmitter_get_splineRibbons_count(const whiteout_M3RibbonEmitter* self);
whiteout_M3SplineRibbon* whiteout_m3_M3RibbonEmitter_get_splineRibbons_at(whiteout_M3RibbonEmitter* self, size_t index);
/* Ribbon emitter flags */
int32_t whiteout_m3_M3RibbonEmitter_get_flags(const whiteout_M3RibbonEmitter* self);
void whiteout_m3_M3RibbonEmitter_set_flags(whiteout_M3RibbonEmitter* self, int32_t value);
/* Size interpolation mode */
int32_t whiteout_m3_M3RibbonEmitter_get_sizeSmoothing(const whiteout_M3RibbonEmitter* self);
void whiteout_m3_M3RibbonEmitter_set_sizeSmoothing(whiteout_M3RibbonEmitter* self, int32_t value);
/* Color interpolation mode */
int32_t whiteout_m3_M3RibbonEmitter_get_colorSmoothing(const whiteout_M3RibbonEmitter* self);
void whiteout_m3_M3RibbonEmitter_set_colorSmoothing(whiteout_M3RibbonEmitter* self, int32_t value);
/* Friction coefficient */
float whiteout_m3_M3RibbonEmitter_get_friction(const whiteout_M3RibbonEmitter* self);
void whiteout_m3_M3RibbonEmitter_set_friction(whiteout_M3RibbonEmitter* self, float value);
/* Bounce coefficient */
float whiteout_m3_M3RibbonEmitter_get_bounce(const whiteout_M3RibbonEmitter* self);
void whiteout_m3_M3RibbonEmitter_set_bounce(whiteout_M3RibbonEmitter* self, float value);
/* LOD reduction level */
uint32_t whiteout_m3_M3RibbonEmitter_get_lodReduce(const whiteout_M3RibbonEmitter* self);
void whiteout_m3_M3RibbonEmitter_set_lodReduce(whiteout_M3RibbonEmitter* self, uint32_t value);
/* LOD cut-off level */
uint32_t whiteout_m3_M3RibbonEmitter_get_lodCut(const whiteout_M3RibbonEmitter* self);
void whiteout_m3_M3RibbonEmitter_set_lodCut(whiteout_M3RibbonEmitter* self, uint32_t value);
/* Yaw variation type */
uint32_t whiteout_m3_M3RibbonEmitter_get_yawType(const whiteout_M3RibbonEmitter* self);
void whiteout_m3_M3RibbonEmitter_set_yawType(whiteout_M3RibbonEmitter* self, uint32_t value);
/* Pitch variation type */
uint32_t whiteout_m3_M3RibbonEmitter_get_pitchType(const whiteout_M3RibbonEmitter* self);
void whiteout_m3_M3RibbonEmitter_set_pitchType(whiteout_M3RibbonEmitter* self, uint32_t value);
/* Speed variation type */
uint32_t whiteout_m3_M3RibbonEmitter_get_speedType(const whiteout_M3RibbonEmitter* self);
void whiteout_m3_M3RibbonEmitter_set_speedType(whiteout_M3RibbonEmitter* self, uint32_t value);
/* Size variation type */
uint32_t whiteout_m3_M3RibbonEmitter_get_sizeType(const whiteout_M3RibbonEmitter* self);
void whiteout_m3_M3RibbonEmitter_set_sizeType(whiteout_M3RibbonEmitter* self, uint32_t value);
/* Alpha variation type */
uint32_t whiteout_m3_M3RibbonEmitter_get_alphaType(const whiteout_M3RibbonEmitter* self);
void whiteout_m3_M3RibbonEmitter_set_alphaType(whiteout_M3RibbonEmitter* self, uint32_t value);
/* ── M3Projector ─────────────────────────────────────────────── */

/* PROJ — Projector / decal (v0–v5, 388 bytes) */
/*  */
/* Projects a material onto scene geometry with animated offset, orientation, field of view, aspect ratio, clipping planes, alpha lifecycle, and attenuation distance. */
whiteout_M3Projector* whiteout_m3_M3Projector_new(void);
void whiteout_m3_M3Projector_delete(whiteout_M3Projector* self);
/* Projection type (ortho/perspective) */
int32_t whiteout_m3_M3Projector_get_projectionType(const whiteout_M3Projector* self);
void whiteout_m3_M3Projector_set_projectionType(whiteout_M3Projector* self, int32_t value);
/* Index into BONE array */
uint32_t whiteout_m3_M3Projector_get_bone(const whiteout_M3Projector* self);
void whiteout_m3_M3Projector_set_bone(whiteout_M3Projector* self, uint32_t value);
/* Index into MATM material map */
uint32_t whiteout_m3_M3Projector_get_materialReferenceIndex(const whiteout_M3Projector* self);
void whiteout_m3_M3Projector_set_materialReferenceIndex(whiteout_M3Projector* self, uint32_t value);
/* Projection falloff distance */
float whiteout_m3_M3Projector_get_falloff(const whiteout_M3Projector* self);
void whiteout_m3_M3Projector_set_falloff(whiteout_M3Projector* self, float value);
/* Alpha at creation */
float whiteout_m3_M3Projector_get_alphaInit(const whiteout_M3Projector* self);
void whiteout_m3_M3Projector_set_alphaInit(whiteout_M3Projector* self, float value);
/* Alpha at midpoint */
float whiteout_m3_M3Projector_get_alphaMid(const whiteout_M3Projector* self);
void whiteout_m3_M3Projector_set_alphaMid(whiteout_M3Projector* self, float value);
/* Alpha at end */
float whiteout_m3_M3Projector_get_alphaEnd(const whiteout_M3Projector* self);
void whiteout_m3_M3Projector_set_alphaEnd(whiteout_M3Projector* self, float value);
/* Attack phase duration */
float whiteout_m3_M3Projector_get_lifetimeAttack(const whiteout_M3Projector* self);
void whiteout_m3_M3Projector_set_lifetimeAttack(whiteout_M3Projector* self, float value);
/* Attack target time */
float whiteout_m3_M3Projector_get_lifetimeAttackTo(const whiteout_M3Projector* self);
void whiteout_m3_M3Projector_set_lifetimeAttackTo(whiteout_M3Projector* self, float value);
/* Hold phase duration */
float whiteout_m3_M3Projector_get_lifetimeHold(const whiteout_M3Projector* self);
void whiteout_m3_M3Projector_set_lifetimeHold(whiteout_M3Projector* self, float value);
/* Hold target time */
float whiteout_m3_M3Projector_get_lifetimeHoldTo(const whiteout_M3Projector* self);
void whiteout_m3_M3Projector_set_lifetimeHoldTo(whiteout_M3Projector* self, float value);
/* Decay phase duration */
float whiteout_m3_M3Projector_get_lifetimeDecay(const whiteout_M3Projector* self);
void whiteout_m3_M3Projector_set_lifetimeDecay(whiteout_M3Projector* self, float value);
/* Decay target time */
float whiteout_m3_M3Projector_get_lifetimeDecayTo(const whiteout_M3Projector* self);
void whiteout_m3_M3Projector_set_lifetimeDecayTo(whiteout_M3Projector* self, float value);
/* Distance-based attenuation */
float whiteout_m3_M3Projector_get_attenuationDistance(const whiteout_M3Projector* self);
void whiteout_m3_M3Projector_set_attenuationDistance(whiteout_M3Projector* self, float value);
/* Render layer */
uint32_t whiteout_m3_M3Projector_get_layer(const whiteout_M3Projector* self);
void whiteout_m3_M3Projector_set_layer(whiteout_M3Projector* self, uint32_t value);
/* LOD reduction level */
uint32_t whiteout_m3_M3Projector_get_lodReduce(const whiteout_M3Projector* self);
void whiteout_m3_M3Projector_set_lodReduce(whiteout_M3Projector* self, uint32_t value);
/* LOD cut-off level */
uint32_t whiteout_m3_M3Projector_get_lodCut(const whiteout_M3Projector* self);
void whiteout_m3_M3Projector_set_lodCut(whiteout_M3Projector* self, uint32_t value);
/* Projector flags */
int32_t whiteout_m3_M3Projector_get_flags(const whiteout_M3Projector* self);
void whiteout_m3_M3Projector_set_flags(whiteout_M3Projector* self, int32_t value);
/* ── M3MaterialMap ─────────────────────────────────────────────── */

/* MATM — Material map entry (v0, 8 bytes) */
/*  */
/* Maps a material type enum to an index into the corresponding material array. The MODL root references an array of these; the renderer uses materialType to dispatch to the correct material vector. */
whiteout_M3MaterialMap* whiteout_m3_M3MaterialMap_new(void);
void whiteout_m3_M3MaterialMap_delete(whiteout_M3MaterialMap* self);
/* Material type (1=standard, 2=displacement, etc.) */
int32_t whiteout_m3_M3MaterialMap_get_materialType(const whiteout_M3MaterialMap* self);
void whiteout_m3_M3MaterialMap_set_materialType(whiteout_M3MaterialMap* self, int32_t value);
/* Index into the typed material array */
uint32_t whiteout_m3_M3MaterialMap_get_materialIndex(const whiteout_M3MaterialMap* self);