bindings/csharp/Whiteout/M3/NativeMethods.M3.cs


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m3_M3RibbonEmitter_get_noiseFrequency(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3RibbonEmitter_set_noiseFrequency(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m3_M3RibbonEmitter_get_noiseCoherence(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3RibbonEmitter_set_noiseCoherence(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m3_M3RibbonEmitter_get_noiseEdge(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3RibbonEmitter_set_noiseEdge(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m3_M3RibbonEmitter_get_indexPlusLength(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3RibbonEmitter_set_indexPlusLength(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m3_M3RibbonEmitter_get_emitterShape(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3RibbonEmitter_set_emitterShape(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_m3_M3RibbonEmitter_get_ribbonType(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3RibbonEmitter_set_ribbonType(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m3_M3RibbonEmitter_get_divisions(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3RibbonEmitter_set_divisions(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m3_M3RibbonEmitter_get_edges(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3RibbonEmitter_set_edges(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m3_M3RibbonEmitter_get_innerRadius(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3RibbonEmitter_set_innerRadius(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_m3_M3RibbonEmitter_get_splineRibbons_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m3_M3RibbonEmitter_get_splineRibbons_at(IntPtr self, nuint index);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_m3_M3RibbonEmitter_get_flags(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3RibbonEmitter_set_flags(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_m3_M3RibbonEmitter_get_sizeSmoothing(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3RibbonEmitter_set_sizeSmoothing(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_m3_M3RibbonEmitter_get_colorSmoothing(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3RibbonEmitter_set_colorSmoothing(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m3_M3RibbonEmitter_get_friction(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3RibbonEmitter_set_friction(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m3_M3RibbonEmitter_get_bounce(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3RibbonEmitter_set_bounce(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m3_M3RibbonEmitter_get_lodReduce(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3RibbonEmitter_set_lodReduce(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m3_M3RibbonEmitter_get_lodCut(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3RibbonEmitter_set_lodCut(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m3_M3RibbonEmitter_get_yawType(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3RibbonEmitter_set_yawType(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m3_M3RibbonEmitter_get_pitchType(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3RibbonEmitter_set_pitchType(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m3_M3RibbonEmitter_get_speedType(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3RibbonEmitter_set_speedType(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m3_M3RibbonEmitter_get_sizeType(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3RibbonEmitter_set_sizeType(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m3_M3RibbonEmitter_get_alphaType(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3RibbonEmitter_set_alphaType(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m3_M3Projector_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3Projector_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_m3_M3Projector_get_projectionType(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3Projector_set_projectionType(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m3_M3Projector_get_bone(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3Projector_set_bone(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m3_M3Projector_get_materialReferenceIndex(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3Projector_set_materialReferenceIndex(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m3_M3Projector_get_falloff(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3Projector_set_falloff(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m3_M3Projector_get_alphaInit(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3Projector_set_alphaInit(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m3_M3Projector_get_alphaMid(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3Projector_set_alphaMid(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m3_M3Projector_get_alphaEnd(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3Projector_set_alphaEnd(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m3_M3Projector_get_lifetimeAttack(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3Projector_set_lifetimeAttack(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m3_M3Projector_get_lifetimeAttackTo(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3Projector_set_lifetimeAttackTo(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m3_M3Projector_get_lifetimeHold(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3Projector_set_lifetimeHold(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m3_M3Projector_get_lifetimeHoldTo(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3Projector_set_lifetimeHoldTo(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m3_M3Projector_get_lifetimeDecay(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3Projector_set_lifetimeDecay(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m3_M3Projector_get_lifetimeDecayTo(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3Projector_set_lifetimeDecayTo(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m3_M3Projector_get_attenuationDistance(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3Projector_set_attenuationDistance(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m3_M3Projector_get_layer(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3Projector_set_layer(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m3_M3Projector_get_lodReduce(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3Projector_set_lodReduce(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m3_M3Projector_get_lodCut(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3Projector_set_lodCut(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_m3_M3Projector_get_flags(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3Projector_set_flags(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m3_M3MaterialMap_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3MaterialMap_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_m3_M3MaterialMap_get_materialType(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3MaterialMap_set_materialType(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m3_M3MaterialMap_get_materialIndex(IntPtr self);
